[package]
name = "latex-linter"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0" # # https://github.com/serde-rs/json
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.5", features = ["derive"] } # https://github.com/clap-rs/clap
